[gd_scene load_steps=2 format=3 uid="uid://bqokxhagbbmo3"]

[ext_resource type="Script" path="res://Scripts/audiosettings.gd" id="1_u3o32"]

[node name="AudioSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_u3o32")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 1440.0
offset_bottom = 800.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GlobalVolume" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GlobalVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
text = "Global volume"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GlobalVolume"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 5.0

[node name="GlobalValue" type="Label" parent="MarginContainer/VBoxContainer/GlobalVolume/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 15
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GlobalSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GlobalVolume/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.01

[node name="GamelVolme" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GamelVolme"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
text = "Game volume"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GamelVolme"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 5.0

[node name="GameValue" type="Label" parent="MarginContainer/VBoxContainer/GamelVolme/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 15
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GamelVolme/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 5.0
max_value = 1.0
step = 0.01

[node name="SFXVolme" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SFXVolme"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
text = "SFX volume"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SFXVolme"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 5.0

[node name="SFXValue" type="Label" parent="MarginContainer/VBoxContainer/SFXVolme/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 15
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXSlider" type="HSlider" parent="MarginContainer/VBoxContainer/SFXVolme/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 5.0
max_value = 1.0
step = 0.01

[node name="MusicVolume" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 18
text = "Music volume"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 5.0

[node name="MusicValue" type="Label" parent="MarginContainer/VBoxContainer/MusicVolume/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 15
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MusicVolume/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 5.0
max_value = 1.0
step = 0.01

[connection signal="value_changed" from="MarginContainer/VBoxContainer/GlobalVolume/VBoxContainer/GlobalSlider" to="." method="_on_global_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GamelVolme/VBoxContainer/GameSlider" to="." method="_on_game_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SFXVolme/VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MusicVolume/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
